QQuickFolderListModel: make sure properties' values can be update

There are some properties in FolderListModel neglect to update their
values, although the new values are passed to the thread which does
the real work

[ChangeLog][QtQuick][QQuickFolderListModel] update the values of some
properties when setting new values to them

Fixes: QTBUG-77965
Change-Id: I77db3388cee569479459deaa2e19546a77da6178
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>